terraform/aws/ecs.tf
####################################
# ECS CLUSTER
####################################
resource "aws_ecs_cluster" "main" {
  name = "assignment-cluster"
}

####################################
# BACKEND TASK DEFINITION
####################################
resource "aws_ecs_task_definition" "backend" {
  family                   = "backend"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_task_execution.arn

  container_definitions = jsonencode([
    {
      name  = "backend"
      image = var.backend_image
      essential = true

      portMappings = [
        {
          containerPort = 8080
          protocol      = "tcp"
        }
      ]
    }
  ])
}

####################################
# FRONTEND TASK DEFINITION
####################################
resource "aws_ecs_task_definition" "frontend" {
  family                   = "frontend"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_task_execution.arn

  container_definitions = jsonencode([
    {
      name  = "frontend"
      image = var.frontend_image
      essential = true

      portMappings = [
        {
          containerPort = 3000
          protocol      = "tcp"
        }
      ]
    }
  ])
}

####################################
# BACKEND ECS SERVICE
####################################
resource "aws_ecs_service" "backend" {
  name            = "backend-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.backend.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  
  network_configuration {
  subnets = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1b.id
  ]

  security_groups  = [aws_security_group.ecs.id]
  assign_public_ip = true
}

  load_balancer {
    target_group_arn = aws_lb_target_group.backend.arn
    container_name   = "backend"
    container_port   = 8080
  }

  depends_on = [
    aws_lb_listener_rule.backend
  ]
}

####################################
# FRONTEND ECS SERVICE
####################################
resource "aws_ecs_service" "frontend" {
  name            = "frontend-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.frontend.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  network_configuration {
  subnets = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1b.id
  ]

  security_groups  = [aws_security_group.ecs.id]
  assign_public_ip = true
}



  load_balancer {
    target_group_arn = aws_lb_target_group.frontend.arn
    container_name   = "frontend"
    container_port   = 3000
  }

  depends_on = [
    aws_lb_listener_rule.frontend
  ]
}
